[tool.poetry]
name = "converso-webm"
version = "0.1.0"
description = ""
authors = ["Joao Costa <joao.costa@duartecon.com.br>"]
readme = "README.md"
packages = [{include = "converso_webm"}]

[tool.poetry.dependencies]
python = "^3.11"
moviepy = "^1.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
blue = "^0.9.1"
taskipy = "^1.11.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.16"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
